# tasksjc

./: .gitignore  README.md  async_http_request.py  async_http_request_advanced.py  caching_decorator.py  class_attributes.py  currency_proxy.py  main.py  parallel_processing_numerical_data.py  pyproject.toml  searching_item_in_ordered_list.py  singleton.py  urls.txt
src/: async_http_request.py  async_http_request_advanced.py  caching_decorator.py  class_attributes.py  currency_proxy.py  decorator_single.py  fetch_task.py  parallel_processing_numerical_data.py  rate_limiter.py  redis_queue.py  searching_item_in_ordered_list.py  singleton.py
